Сделал добавление обзоров, но надо подумать как очищать форму для заполнения

--- a/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
+++ b/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
@@ -1,147 +1,153 @@
-<div class="container" >
-    <h1>Отзывы о {{reports[0].Car.Model}}</h1>
-    <form *ngIf="false" [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="review">
-        <div class="form-container">
-            <div class="item">
-                <span [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }">Имя*</span>
-                <input formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" name="name" type="text" required #name>
-                <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-                    <span class="d-block is-invalid" *ngIf="f.firstName.errors.required">Введите имя</span>
-                    
-                </div>
-            </div>
-            <div class="item">
-                <span>Фамилия</span>
-                <input formControlName="sur"   type="text" #sur>
-                
-            </div>
-            <div class="item">
-                <span [ngClass]="{ 'is-invalid': submitted && f.date.errors }">Дата посещения*</span>
-                <input formControlName="date" [ngClass]="{ 'is-invalid': submitted && f.date.errors }" type="date" #date required>
-                <div *ngIf="submitted && f.date.errors" class="invalid-feedback">
-                    <span class="d-block is-invalid" *ngIf="f.date.errors.required">Введите дату</span>
-                    
-                </div>
-            </div>
-            <div class="item">
-                <span [ngClass]="{ 'is-invalid': submitted && f.mark.errors }">Оценка*</span>
-                <select formControlName="mark" [ngClass]="{ 'is-invalid': submitted && f.mark.errors }" #mark>
-                    <option >Отлично</option>
-                    <option >Хорошо</option>
-                    <option >Плохо</option>
-                    <option >Очень плохо</option>
-                </select>
-                <div *ngIf="submitted && f.mark.errors" class="invalid-feedback">
-                    <span class="d-block is-invalid" *ngIf="f.mark.errors.required">Укажите вашу оценку</span>
-                    
-                </div>
-                
-            </div>
-            <div class="item">
-                <span>Ваш опыт в квестах</span>
-                <select formControlName="skill" #skill>
-                    <option >Новичок</option>
-                    <option >Любитель</option>
-                    <option >Профессионал</option>
-                </select>
-                
-            </div>
-        </div>
-        <div class="item ">
-            <span [ngClass]="{ 'is-invalid': submitted && f.report.errors }">Отзыв*</span>
-            <textarea formControlName="report" [ngClass]="{ 'is-invalid': submitted && f.report.errors }" cols="10" rows="5" #report></textarea>
-            <div *ngIf="submitted && f.report.errors" class="invalid-feedback">
-                <span class="d-block is-invalid" *ngIf="f.report.errors.required">Введите отзыв</span>
-                <span class="d-block is-invalid" *ngIf="f.report.errors.minlength">Введите не меньше 5 символов!</span>
-            </div>
-        </div>
-        <button class="btn btn-primary" >Оставить отзыв</button>
-    </form>
-    
-  
-
-    <div class="comments" *ngIf="feedBackService.curReports">
-        <div *ngFor="let com of feedBackService.curReports"  class="comment" [ngClass]='{"comment-good":com.Mark>3, "comment-bad":com.Mark<=3}' >
-            <div class="row">
-                <div class="col-sm-9">
-                    <p>
-                        <img class ="user-img-small"  src="{{com.User.Photo}}"> {{com.User.Name}}   |   
+<div class="container-fluid">
+    <div class="container booking-container" >
+        <h1>Отзывы</h1>
+        <form *ngIf="reports.length==0" [formGroup]="registerForm"  class="review-top">
+            <div class="form-container row">
+                <div class="col-sm-6">
+                    <div class="item">
+                        <span [ngClass]="{ 'is-invalid': submitted && feedBack.CarId==0 }">Автомобиль*</span>
+                        <picker *ngIf="cars.length!=0" [items]="cars" [out]="feedBack" [prop]="'CarId'"></picker>
+                        <div *ngIf="submitted && feedBack.CarId==0" class="invalid-feedback">
+                            <span class="d-block is-invalid" >Укажите автомобиль</span>
+                            
+                        </div>
                         
-                        <i class="fa fa-car"></i> {{com.Car.Model}}
-                    </p>
+                    </div>
+                    <div class="item">
+                        <span [ngClass]="{ 'is-invalid': submitted && f.DateStart.errors }">Дата начала использования*</span>
+                        <input formControlName="DateStart" [ngClass]="{ 'is-invalid': submitted && f.DateStart.errors }" type="date" #date required>
+                        <div *ngIf="submitted && f.DateStart.errors" class="invalid-feedback">
+                            <span class="d-block is-invalid" *ngIf="f.DateStart.errors.required">Введите дату</span>
+                            
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <span class="glyphicon glyphicon-time"></span> {{com.CreatedDate | date: 'dd.MM.yyyy'}}
-                    <br>
-                    <rating [mark]="com.Mark"></rating>
+                <div class="col-sm-6">
+                    <div class="item">
+                        <span [ngClass]="{ 'is-invalid': submitted  && feedBack.Look==0}">Внешний вид машины</span>
+                        <rating [markOut]="feedBack" [prop]="'Look'"></rating>
+                        <div *ngIf="submitted && feedBack.Look==0" class="invalid-feedback">
+                            <span class="d-block is-invalid">Укажите автомобиль</span>                          
+                        </div>
+                    </div>
+                    <div class="item">
+                        <span [ngClass]="{ 'is-invalid': submitted && feedBack.Comfort==0 }">Комфорт</span>
+                        <rating [markOut]="feedBack" [prop]="'Comfort'"></rating>
+                        <div *ngIf="submitted && feedBack.Comfort==0" class="invalid-feedback">
+                            <span class="d-block is-invalid">Укажите автомобиль</span>                    
+                        </div>
+                        
+                    </div>
+                    <div class="item">
+                        <span [ngClass]="{ 'is-invalid': submitted && feedBack.Drive==0 }">Ходовые качества</span>
+                        <rating [markOut]="feedBack" [prop]="'Drive'"></rating>
+                        <div *ngIf="submitted && feedBack.Drive==0" class="invalid-feedback">
+                            <span class="d-block is-invalid">Укажите автомобиль</span>                   
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-9">
-                    <p>{{com.Text}}</p>
-                    <div class="report-comments">
-                        <div *ngFor="let comment of com.Comments" class="comment">
-                            <div class="row">
-                                <div class="col-sm-9">
-                                    <p>
-                                        <img class ="user-img-small"  src="{{com.User.Photo}}"> {{comment.User.Name}} 
-                                    </p>
-                                    <p>{{comment.Text}}</p>
-                                </div>
-                                <div class="col-sm-3">
-                                    <span class="glyphicon glyphicon-time"></span> {{comment.CreatedDate | date: 'dd.MM.yyyy'}}
-                                    <br>
-                                    <div class="com-rat" (click)="addLikes(comment, true, false)">
-                                            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-                                            <span>{{comment.Likes}}</span>
+            <div class="item">
+                <span [ngClass]="{ 'is-invalid': submitted && f.Report.errors }">Отзыв*</span>
+                <textarea formControlName="Report" [ngClass]="{ 'is-invalid': submitted && f.Report.errors }"  rows="5" cols="20" #report></textarea>
+                <div *ngIf="submitted && f.Report.errors" class="invalid-feedback">
+                    <span class="d-block is-invalid" *ngIf="f.Report.errors.required">Введите отзыв</span>
+                    <span class="d-block is-invalid" *ngIf="f.Report.errors.minlength">Введите не меньше 5 символов!</span>
+                </div>
+            </div>
+            <button class="btn btn-primary" (click)="onSubmit()">Оставить отзыв</button>
+            <div *ngIf="!autorized" class="blur-form">
+                <button class="btn btn-primary" (click)="userService.ShowForm(0)" >{{"LOG_IN" | translate}}</button>
+                <button class="btn btn-success" (click)="userService.ShowForm(1)">{{"REGISTRATION" | translate}}</button>
+            </div>
+        </form>
+        
+      
+    
+        <div class="comments" *ngIf="feedBackService.curReports">
+            <div *ngFor="let com of feedBackService.curReports"  class="comment" [ngClass]='{"comment-good":com.Mark>3, "comment-bad":com.Mark<=3}' >
+                <div class="row">
+                    <div class="col-sm-9">
+                        <p>
+                            <img class ="user-img-small"  src="{{com.User.Photo}}"> {{com.User.Name}}   |   
+                            
+                            <i class="fa fa-car"></i> {{com.Car.Model}}
+                        </p>
+                    </div>
+                    <div class="col-sm-3">
+                        <span class="glyphicon glyphicon-time"></span> {{com.CreatedDate | date: 'dd.MM.yyyy'}}
+                        <br>
+                        <rating [mark]="com.Mark"></rating>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-9">
+                        <p>{{com.Text}}</p>
+                        <div class="report-comments">
+                            <div *ngFor="let comment of com.Comments" class="comment">
+                                <div class="row">
+                                    <div class="col-sm-9">
+                                        <p>
+                                            <img class ="user-img-small"  src="{{com.User.Photo}}"> {{comment.User.Name}} 
+                                        </p>
+                                        <p>{{comment.Text}}</p>
                                     </div>
-                                    <div class="com-rat" (click)="addLikes(comment, false, false)">
-                                        <i class="fa fa-thumbs-down" aria-hidden="true"></i>
-                                        <span>{{comment.Dislikes}}</span>
+                                    <div class="col-sm-3">
+                                        <span class="glyphicon glyphicon-time"></span> {{comment.CreatedDate | date: 'dd.MM.yyyy'}}
+                                        <br>
+                                        <div class="com-rat" (click)="addLikes(comment, true, false)">
+                                                <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                                <span>{{comment.Likes}}</span>
+                                        </div>
+                                        <div class="com-rat" (click)="addLikes(comment, false, false)">
+                                            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
+                                            <span>{{comment.Dislikes}}</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-3">
+                        <div class="com-rat" (click)="addLikes(com, true, true)">
+                            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                            <span>{{com.Likes}}</span>
+                        </div>
+                        <div class="com-rat" (click)="addLikes(com, false, true)">
+                            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
+                            <span>{{com.Dislikes}}</span>
+                        </div>
+                        <div class="com-rat">
+                                <i class="fa fa-commenting" aria-hidden="true"></i>
+                                <span>{{com.Comments.length}}</span>
+                        </div>
+                        
+    
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <div class="com-rat" (click)="addLikes(com, true, true)">
-                        <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-                        <span>{{com.Likes}}</span>
+                <button class="btn" (click)="showForm(com)"  >Ответить</button>
+                <form [formGroup]="commentForm"  *ngIf="com.ShowForm"  class="review">
+                    <div class="item ">
+                        <span [ngClass]="{ 'is-invalid': submitted && f.report.errors }">Комментарий</span>
+                        <textarea maxlength="1000" formControlName="report" [ngClass]="{ 'is-invalid': submitted && f.report.errors }" cols="10" rows="5" #report></textarea>
+                        <div *ngIf="submitted && f.report.errors" class="invalid-feedback">
+                            <span class="d-block is-invalid" *ngIf="f.report.errors.required">Введите комментарий</span>
+                            <span class="d-block is-invalid" *ngIf="f.report.errors.minlength">Введите не меньше 5 символов!</span>
+                        </div>
                     </div>
-                    <div class="com-rat" (click)="addLikes(com, false, true)">
-                        <i class="fa fa-thumbs-down" aria-hidden="true"></i>
-                        <span>{{com.Dislikes}}</span>
-                    </div>
-                    <div class="com-rat">
-                            <i class="fa fa-commenting" aria-hidden="true"></i>
-                            <span>{{com.Comments.length}}</span>
+                    <div class="buttons">
+                        <button class="btn btn-primary" (click)="addComment(report.value, com)">Отправить</button>
+                        <button class="btn btn-default" (click)="showForm(com)">Отмена</button>
                     </div>
                     
-
-                </div>
+                </form>
+                <div *ngIf="com.ShowForm" class="background-blur" (click)="showForm(com)"></div>
             </div>
-            <button class="btn" (click)="showForm(com)"  >Ответить</button>
-            <form [formGroup]="commentForm"  *ngIf="com.ShowForm"  class="review">
-                <div class="item ">
-                    <span [ngClass]="{ 'is-invalid': submitted && f.report.errors }">Комментарий</span>
-                    <textarea formControlName="report" [ngClass]="{ 'is-invalid': submitted && f.report.errors }" cols="10" rows="5" #report></textarea>
-                    <div *ngIf="submitted && f.report.errors" class="invalid-feedback">
-                        <span class="d-block is-invalid" *ngIf="f.report.errors.required">Введите комментарий</span>
-                        <span class="d-block is-invalid" *ngIf="f.report.errors.minlength">Введите не меньше 5 символов!</span>
-                    </div>
-                </div>
-                <div class="buttons">
-                    <button class="btn btn-primary" (click)="addComment(report.value, com)">Отправить</button>
-                    <button class="btn btn-default" (click)="showForm(com)">Отмена</button>
-                </div>
-                
-            </form>
-            <div *ngIf="com.ShowForm" class="background-blur" (click)="showForm(com)"></div>
+            <pages *ngIf="feedBackService.reports.length>21" [service]="feedBackService"></pages>
         </div>
-        <pages *ngIf="feedBackService.reports.length>21" [service]="feedBackService"></pages>
+        
     </div>
-    
 </div>
+
 <alert  [alert] ="alertService"></alert>
 <user-form *ngIf="userService.openForm" [service]="userService" [alert]="alertService"></user-form>
