--- a/CarsCrete/ClientApp/src/app/feedback/feedback.component.css
+++ b/CarsCrete/ClientApp/src/app/feedback/feedback.component.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
-    width: 50%;
+    
 }
 .review .item{
-    width: auto;
+    width: 100%;
 }
 .form-container{
     display: flex;
@@ -15,6 +15,20 @@
     width: 200px;
     margin-right: 20px;
     
+}
+.blur-form{
+    z-index: 300;
+    background-color: rgba(0, 0, 0, 0.411);
+    position: absolute;
+    top:10;
+    left: 100;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 -10px 0 -10px;
+    border-radius: 4px;
 }
 .row{
     display: flex;
@@ -80,6 +94,9 @@ button{
 
     
 }
+textarea{
+    width: 100%;
+}
 .comment{
     margin: 20px 0 20px 0;
     position: relative;
@@ -111,13 +128,23 @@ button{
 }
 .review{
     z-index: 100;
-    background-color: white;
-    box-shadow: 0 0 10px black;
+    
     position: absolute;
     bottom: 20px;
     left: 20px;
     width: 50%;
     max-width: 500px;
+    
+
+}
+.review-top{
+    width: 100%;
+    position: relative;
+}
+.review-top, .review{
+    
+    background-color: white;
+    box-shadow: 0 0 10px black;
     padding: 10px;
     border-radius: 5px; 
 
@@ -168,4 +195,8 @@ button{
     width: 100% !important;
     padding: 0;
     margin: 0;
+}
+.container-fluid{
+    display: flex;
+    justify-content: center;
 }
