--- a/CarsCrete/ClientApp/src/app/user-form/user-form.component.html
+++ b/CarsCrete/ClientApp/src/app/user-form/user-form.component.html
@@ -21,6 +21,14 @@
           
         </div>
       </div>
+      <div class="item" *ngIf="this.service.type==1">
+        <span [ngClass]="{ 'is-invalid': submitted && f.Tel.errors }">Телефон</span>
+        <input formControlName="Tel" [ngClass]="{ 'is-invalid': submitted && f.Tel.errors }" value="{{user?(user.Tel?user.Tel:''):''}}" name="name" type="tel" pattern="[0-9]{11}" required>
+        <div *ngIf="submitted && f.Tel.errors" class="invalid-feedback">
+          
+          <span class="d-block is-invalid" *ngIf="f.Tel.errors.pattern">Формат: 89161782323</span>
+        </div>
+      </div>
   
       <div class="item">
         <span [ngClass]="{ 'is-invalid': submitted && f.Password.errors }">{{"PASSWORD" | translate}}</span>
