--- a/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -7,7 +7,10 @@
         <div class="row menu-prop">
             
             <div *ngIf="!userService.currentUser" (click)="userService.ShowForm(1)"><span  class='glyphicon glyphicon-plus'></span><span>{{"REGISTRATION" | translate}}</span></div>
-            <div *ngIf="!!userService.currentUser" (click)="userService.ShowForm(1)"><span  class='glyphicon glyphicon-user'></span><span>{{userService.currentUser.Name}}</span></div>
+            <!-- <div [routerLinkActive]='["link-active"]'> -->
+            <div [routerLinkActive]='["link-active"]' *ngIf="!!userService.currentUser"  [routerLink]='["/user"]'><span  class='glyphicon glyphicon-user'></span><span>{{userService.currentUser.Name}}</span></div>
+            <!-- </div> -->
+            
             <div (click)="userService.currentUser?Exit():userService.ShowForm(0)"><span *ngIf="!userService.currentUser"   class='glyphicon glyphicon-user'></span><span>{{(userService.currentUser?"LOG_OUT":"LOG_IN") | translate}}</span></div>
             <div class = "lang">
                 
@@ -30,8 +33,8 @@
                     <div class='navbar navbar-inverse'>
                         <div class='navbar-header'>
                             <div class="row menu-prop">
-                                    <!-- <div *ngIf="!userService.currentUser" (click)="userService.ShowForm(1)"><span  class='glyphicon glyphicon-plus'></span><span>{{"REGISTRATION" | translate}}</span></div> -->
-                                    <div *ngIf="!!userService.currentUser" [routerLinkActive]='["link-active"]' [routerLink]='["/user"]' ><span  class='glyphicon glyphicon-user'></span><span>{{userService.currentUser.Email}}</span></div>
+                                    <div *ngIf="!userService.currentUser" (click)="userService.ShowForm(1)"><span  class='glyphicon glyphicon-plus'></span><span>{{"REGISTRATION" | translate}}</span></div>
+                                    <div *ngIf="!!userService.currentUser" [routerLinkActive]='["link-active"]' [routerLink]='["/user"]' ><span  class='glyphicon glyphicon-user'></span><span>{{userService.currentUser.Name}}</span></div>
                                     <div (click)="userService.currentUser?Exit():userService.ShowForm(0)"><span *ngIf="!userService.currentUser"   class='glyphicon glyphicon-user'></span><span>{{(userService.currentUser?"LOG_OUT":"LOG_IN") | translate}}</span></div>
                                     <div class = "lang">
                                         
