--- a/CarsCrete/ClientApp/src/app/statistics/statistics.component.css
+++ b/CarsCrete/ClientApp/src/app/statistics/statistics.component.css
@@ -2,6 +2,7 @@
     display:flex;
     flex-direction: column;
     justify-content: flex-end;
+    z-index: 20;
 }
 .month-a{
     background-color: green;
@@ -14,7 +15,21 @@
     width: 30px;
 }
 .books-stat{
-    display: flex;
+    position: relative;
+    display: inline-flex;
     height: 200px;
     
+}
+.stat-back{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: lightblue;
+    z-index: 10;
+    
+}
+hr{
+    margin-bottom: 0;
 }
